@@ -214,7 +214,9 @@ namespace libtorrent
 		, m_torrent_file(p.ti ? p.ti : new torrent_info(p.info_hash))
 		, m_storage(0)
 		, m_host_resolver(ses.m_io_service)
-		, m_lsd_announce_timer(ses.m_io_service)
+#ifndef TORRENT_DISABLE_DHT
+		, m_dht_announce_timer(ses.m_io_service)
+#endif
 		, m_tracker_timer(ses.m_io_service)
 #ifndef TORRENT_DISABLE_DHT
 		, m_last_dht_announce(time_now() - minutes(15))
@@ -368,10 +370,9 @@ namespace libtorrent
 		// DHT announces are done on the local service
 		// discovery timer. Trigger it.
 		error_code ec;
-		boost::weak_ptr<torrent> self(shared_from_this());
-		m_lsd_announce_timer.expires_from_now(seconds(1), ec);
-		m_lsd_announce_timer.async_wait(
-			bind(&torrent::on_lsd_announce_disp, self, _1));
+		m_dht_announce_timer.expires_from_now(seconds(1), ec);
+		m_dht_announce_timer.async_wait(
+			bind(&torrent::on_dht_announce, shared_from_this(), _1));
 	}
 #endif
 
@@ -1175,29 +1176,13 @@ namespace libtorrent
 		announce_with_tracker();
 	}
 
-	void torrent::on_lsd_announce_disp(boost::weak_ptr<torrent> p
-		, error_code const& e)
+	void torrent::lsd_announce()
 	{
-#if defined TORRENT_LOGGING
-		if (e)
-		{
-			boost::shared_ptr<torrent> t = p.lock();
-			if (!t) return;
-			(*t->session().m_logger) << time_now_string() << " on_lsd_announce_disp: " << e.message() << "\n";
-		}
-#else
-		if (e) return;
-#endif
-		boost::shared_ptr<torrent> t = p.lock();
-		if (!t) return;
-		t->on_lsd_announce();
-	}
-
-	void torrent::on_lsd_announce()
-	{
-		mutex::scoped_lock l(m_ses.m_mutex);
-
 		if (m_abort) return;
+
+		// if the files haven't been checked yet, we're
+		// not ready for peers
+		if (!m_files_checked) return;
 
 		TORRENT_ASSERT(!m_torrent_file->priv());
 		if (m_torrent_file->is_valid()
@@ -1206,36 +1191,39 @@ namespace libtorrent
 					&& !m_settings.allow_i2p_mixed)))
 			return;
 
-
 		if (is_paused()) return;
-
-		boost::weak_ptr<torrent> self(shared_from_this());
-
-		error_code ec;
-
-		// announce on local network every 5 minutes
-		m_lsd_announce_timer.expires_from_now(minutes(5), ec);
-		m_lsd_announce_timer.async_wait(
-			bind(&torrent::on_lsd_announce_disp, self, _1));
 
 		// announce with the local discovery service
 		m_ses.announce_lsd(m_torrent_file->info_hash());
-
-#ifndef TORRENT_DISABLE_DHT
-		if (!m_ses.m_dht) return;
-		ptime now = time_now();
-		if (should_announce_dht() && now - m_last_dht_announce > minutes(14))
-		{
-			m_last_dht_announce = now;
-			m_ses.m_dht->announce(m_torrent_file->info_hash()
-				, m_ses.listen_port()
-				, bind(&torrent::on_dht_announce_response_disp, self, _1));
-		}
-#endif
 	}
 
 #ifndef TORRENT_DISABLE_DHT
 
+	void torrent::on_dht_announce(error_code const& e)
+	{
+		if (e) return;
+
+		mutex::scoped_lock l(m_ses.m_mutex);
+		if (m_abort) return;
+
+		error_code ec;
+		m_dht_announce_timer.expires_from_now(minutes(15), ec);
+		m_dht_announce_timer.async_wait(
+			bind(&torrent::on_dht_announce, shared_from_this(), _1));
+
+		if (m_torrent_file->is_valid() && m_torrent_file->priv())
+			return;
+
+		if (is_paused()) return;
+		if (!m_ses.m_dht) return;
+		if (!should_announce_dht()) return;
+
+		m_last_dht_announce = time_now();
+		boost::weak_ptr<torrent> self(shared_from_this());
+		m_ses.m_dht->announce(m_torrent_file->info_hash()
+			, m_ses.listen_port()
+			, bind(&torrent::on_dht_announce_response_disp, self, _1));
+  	}
 	void torrent::on_dht_announce_response_disp(boost::weak_ptr<libtorrent::torrent> t
 		, std::vector<tcp::endpoint> const& peers)
 	{
@@ -1617,7 +1605,7 @@ namespace libtorrent
 
 #if defined TORRENT_LOGGING
 		if (ec)
-			*m_ses.m_logger << time_now_string() << " on_i2p_resolve: " << e.message() << "\n";
+			*m_ses.m_logger << time_now_string() << " on_i2p_resolve: " << ec.message() << "\n";
 #endif
 		if (ec || m_ses.is_aborted()) return;
 
@@ -1633,7 +1621,7 @@ namespace libtorrent
 		INVARIANT_CHECK;
 
 #if defined TORRENT_LOGGING
-		if (ec)
+		if (e)
 			*m_ses.m_logger << time_now_string() << " on_peer_name_lookup: " << e.message() << "\n";
 #endif
 		if (e || host == tcp::resolver::iterator() ||
@@ -5270,11 +5258,14 @@ namespace libtorrent
 				&& (!m_torrent_file->is_i2p()
 					|| m_settings.allow_i2p_mixed)))
 		{
+			if (m_ses.m_lsd) lsd_announce();
+
+#ifndef TORRENT_DISABLE_DHT
 			error_code ec;
-			boost::weak_ptr<torrent> self(shared_from_this());
-			m_lsd_announce_timer.expires_from_now(seconds(1), ec);
-			m_lsd_announce_timer.async_wait(
-				bind(&torrent::on_lsd_announce_disp, self, _1));
+			m_dht_announce_timer.expires_from_now(seconds(1), ec);
+			m_dht_announce_timer.async_wait(
+				bind(&torrent::on_dht_announce, shared_from_this(), _1));
+#endif
 		}
 	}
 
@@ -5283,7 +5274,9 @@ namespace libtorrent
 		if (!m_announcing) return;
 
 		error_code ec;
-		m_lsd_announce_timer.cancel(ec);
+#ifndef TORRENT_DISABLE_DHT
+		m_dht_announce_timer.cancel(ec);
+#endif
 		m_tracker_timer.cancel(ec);
 
 		m_announcing = false;
